hermes_fuzz_executed_few_shot_v2/fuzz_50_execution
'use strict';
let foo3 = 'foo2';
foo3;
let foo4 = 'foo4';
foo4;  
 
'use strict';
let foo3 = 'foo2';
let foo4 = 'foo4';
foo3 > +foo4;  
 
 
'use strict';
let foo3 = 'foo2';
let foo4 = 'foo4';
foo3 < +foo4;  
 
'use strict';
let foo3 = 123 + 'foo3';
let foo4 = 4568 - 'foo4';
(foo3 > foo4) || false;  
 
 
'use strict';
let foo = [];
function test(){return foo;}
test();
let foo2 = {};
typeof foo3 = 'function',foo2;foo2.foo(test); 
 
'use strict';
let foo = [];
let name = foo;
let fn = function test(){}
fn.name = name,fn; 
 
'use strict';
let v1 = Symbol('v1');
let v2 = Symbol('v2');
let s1 = Symbol();
let s2 = new Symbol();
let s3 = Symbol('s3');
 
function fn1(fn) {
  fn.toString();
}
function fn2(fn) {
  fn();
}
 
 fn2(fn1);
 
import { Promise } from 'hermes-web';
let promise = new Promise(function(resolve) { console.log("resolver function"); resolve(); });
function test(params) {
	console.log(params,' params');
}
let value;
test(new Promise(function(resolve)
{
	return  fn1(() => resolve());
}));
 
import { Promise } from 'hermes-web';
let promise = new Promise((resolve, reject)

Execution Output ------------------:
test.js:65:44: error: ')' expected at end of function call
let promise = new Promise((resolve, reject)
                         ~~~~~~~~~~~~~~~~~~^
